<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <RadioGroup
            android:id="@+id/meter_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_meter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/meter" />

            <RadioButton
                android:id="@+id/radio_sqm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sqmtr" />

            <RadioButton
                android:id="@+id/radio_cum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cumtr" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edit_meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meter"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonConvertMeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:paddingBottom="20dp"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingStart="40dp"
            android:paddingTop="20dp"
            android:text="@string/convert"
            tools:ignore="NewApi" />

        <TextView
            android:id="@+id/textMeter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textMeter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textMeter3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="32sp" />

    </LinearLayout>
</ScrollView>

