<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="in.nowke.koluconvert.models.Units" />

        <import type="android.view.View" />

        <import type="android.text.InputType" />

        <variable
            name="footViewModel"
            type="in.nowke.koluconvert.ui.foot.FootViewModel" />

        <variable
            name="fragment"
            type="in.nowke.koluconvert.ui.foot.FootFragment" />

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_foot_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_foot_type_foot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="@{() -> footViewModel.setFootType(1)}"
                    android:text="@string/radio_text_foot" />

                <RadioButton
                    android:id="@+id/radio_foot_type_square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> footViewModel.setFootType(2)}"
                    android:text="@string/radio_text_square" />

                <RadioButton
                    android:id="@+id/radio_foot_type_cube"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> footViewModel.setFootType(3)}"
                    android:text="@string/radio_text_cubic" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_foot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edittext_foot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{() -> footViewModel.convert() }"
                        android:hint="@string/hint_foot"
                        android:imeOptions="actionNext"
                        android:inputType="@{footViewModel.footType == Units.FOOT ? InputType.TYPE_CLASS_NUMBER : InputType.TYPE_CLASS_NUMBER | InputType.TYPE_NUMBER_FLAG_DECIMAL}"
                        android:selectAllOnFocus="true"
                        android:text="@={footViewModel.foot}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_inch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:visibility="@{footViewModel.footType == Units.FOOT ? View.VISIBLE : View.INVISIBLE}">

                    <EditText
                        android:id="@+id/edittext_inch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{() -> footViewModel.convert()}"
                        android:hint="@string/hint_inch"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:text="@={footViewModel.inch}" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonConvertFoot"
                style="@style/ButtonConvertStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.onClickConvert()}"
                android:text="@string/button_convert" />

            <TextView
                android:id="@+id/textfoot_meter"
                style="@style/TextViewResultStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{footViewModel.textMeter}" />

            <TextView
                android:id="@+id/textfoot_madhur"
                style="@style/TextViewResultStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{footViewModel.textMadhur}"
                android:visibility="@{textinputInch.visibility}" />

            <TextView
                android:id="@+id/textfoot_payyannur"
                style="@style/TextViewResultStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{footViewModel.textPayyannur}"
                android:visibility="@{textinputInch.visibility}" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>